--- a/projects/angular/src/styles/core/tokens/_properties.tokens.scss
+++ b/projects/angular/src/styles/core/tokens/_properties.tokens.scss
@@ -4,6 +4,8 @@
  * This software is released under MIT license.
  * The full license information can be found in LICENSE in the root directory of this project.
  */
+@use '../../variables/variables.density' as density;
+
 :where(:root, :host) {
   --cds-global-base: 20;
   --cds-global-scale-space: 1;
@@ -312,48 +314,48 @@
   --cds-global-typography-link-color-visited: var(--cds-global-color-violet-700);
   --cds-global-typography-link-color-visited-hover: var(--cds-global-color-violet-1000);
   --cds-global-typography-link-on-colorbg: var(--cds-global-color-black);
-  --cds-global-typography-body-font-size: calc(14 * var(--cds-internal-scale-3));
-  --cds-global-typography-body-line-height: 1.4285714em;
+  --cds-global-typography-body-font-size: #{density.$clr-base-typography-font-size-default};
+  --cds-global-typography-body-line-height: #{density.$clr-base-typography-line-height-20};
   --cds-global-typography-body-letter-spacing: -0.00714286em;
   --cds-global-typography-body-font-weight: 400;
-  --cds-global-typography-display-font-size: calc(40 * var(--cds-internal-scale-3));
-  --cds-global-typography-display-line-height: 1.1em;
+  --cds-global-typography-display-font-size: #{density.$clr-base-typography-font-size-display};
+  --cds-global-typography-display-line-height: #{density.$clr-base-typography-line-height-44};
   --cds-global-typography-display-letter-spacing: -0.0125em;
   --cds-global-typography-display-font-weight: 500;
-  --cds-global-typography-heading-font-size: calc(32 * var(--cds-internal-scale-3));
-  --cds-global-typography-heading-line-height: 1.125em;
+  --cds-global-typography-heading-font-size: #{density.$clr-base-typography-font-size-heading};
+  --cds-global-typography-heading-line-height: #{density.$clr-base-typography-line-height-32};
   --cds-global-typography-heading-letter-spacing: -0.0125em;
   --cds-global-typography-heading-font-weight: 500;
-  --cds-global-typography-headline-font-size: calc(32 * var(--cds-internal-scale-3));
-  --cds-global-typography-headline-line-height: 1.125em;
+  --cds-global-typography-headline-font-size: #{density.$clr-base-typography-font-size-headline};
+  --cds-global-typography-headline-line-height: #{density.$clr-base-typography-line-height-36};
   --cds-global-typography-headline-letter-spacing: -0.0125em;
   --cds-global-typography-headline-font-weight: 500;
-  --cds-global-typography-title-font-size: calc(24 * var(--cds-internal-scale-3));
-  --cds-global-typography-title-line-height: 1.333333em;
+  --cds-global-typography-title-font-size: #{density.$clr-base-typography-font-size-heading};
+  --cds-global-typography-title-line-height: #{density.$clr-base-typography-line-height-32};
   --cds-global-typography-title-letter-spacing: -0.00833333em;
   --cds-global-typography-title-font-weight: 500;
-  --cds-global-typography-section-font-size: calc(20 * var(--cds-internal-scale-3));
-  --cds-global-typography-section-line-height: 1.2em;
+  --cds-global-typography-section-font-size: #{density.$clr-base-typography-font-size-section};
+  --cds-global-typography-section-line-height: #{density.$clr-base-typography-line-height-24};
   --cds-global-typography-section-letter-spacing: -0.01em;
   --cds-global-typography-section-font-weight: 500;
-  --cds-global-typography-subsection-font-size: calc(16 * var(--cds-internal-scale-3));
-  --cds-global-typography-subsection-line-height: 1.5em;
+  --cds-global-typography-subsection-font-size: #{density.$clr-base-typography-font-size-sub-section};
+  --cds-global-typography-subsection-line-height: #{density.$clr-base-typography-line-height-24};
   --cds-global-typography-subsection-letter-spacing: -0.0125em;
   --cds-global-typography-subsection-font-weight: 500;
-  --cds-global-typography-message-font-size: calc(16 * var(--cds-internal-scale-3));
-  --cds-global-typography-message-line-height: 1.5em;
+  --cds-global-typography-message-font-size: #{density.$clr-base-typography-font-size-sub-section};
+  --cds-global-typography-message-line-height: #{density.$clr-base-typography-line-height-24};
   --cds-global-typography-message-letter-spacing: -0.0125em;
   --cds-global-typography-message-font-weight: calc(400 * (1rem / var(--cds-global-base)));
-  --cds-global-typography-secondary-font-size: calc(13 * var(--cds-internal-scale-3));
-  --cds-global-typography-secondary-line-height: 1.23077em;
+  --cds-global-typography-secondary-font-size: #{density.$clr-base-typography-font-size-inline};
+  --cds-global-typography-secondary-line-height: #{density.$clr-base-typography-line-height-16};
   --cds-global-typography-secondary-letter-spacing: -0.007692em;
   --cds-global-typography-secondary-font-weight: 400;
-  --cds-global-typography-caption-font-size: calc(11 * var(--cds-internal-scale-3));
-  --cds-global-typography-caption-line-height: 1.454545em;
+  --cds-global-typography-caption-font-size: #{density.$clr-base-typography-font-size-caption};
+  --cds-global-typography-caption-line-height: #{density.$clr-base-typography-line-height-16};
   --cds-global-typography-caption-letter-spacing: 0.018182em;
   --cds-global-typography-caption-font-weight: 400;
-  --cds-global-typography-smallcaption-font-size: calc(10 * var(--cds-internal-scale-3));
-  --cds-global-typography-smallcaption-line-height: 1.2em;
+  --cds-global-typography-smallcaption-font-size: #{density.$clr-base-typography-font-size-caption-small};
+  --cds-global-typography-smallcaption-line-height: #{density.$clr-base-typography-line-height-12};
   --cds-global-typography-smallcaption-letter-spacing: 0.05em;
   --cds-global-typography-smallcaption-font-weight: 500;
   --cds-global-typography-info-hover: var(--cds-global-color-blue-800);
@@ -375,6 +377,15 @@
   --cds-global-animation-easing-primary: cubic-bezier(0, 0.99, 0, 0.99);
   --cds-global-animation-easing-secondary: cubic-bezier(0, 1.5, 0.5, 1);
   --cds-global-animation-easing-loop: cubic-bezier(0.17, 0.4, 0.8, 0.79);
+  --cds-global-animation-skeleton-duration: 4s;
+  --cds-global-animation-easing-in-out: cubic-bezier(0.42, 0.01, 0.58, 1); // ease-in-out;
+  --cds-alias-object-skeleton-loading-gradient: linear-gradient(
+    90deg,
+    var(--cds-alias-object-interaction-background) 0%,
+    var(--cds-global-color-construction-200) 35%,
+    var(--cds-global-color-construction-300) 65%,
+    var(--cds-alias-object-interaction-background) 100%
+  );
   --cds-alias-object-border-radius-100: calc(4 * (1rem / var(--cds-global-base)));
   --cds-alias-object-border-radius-200: calc(12 * (1rem / var(--cds-global-base)));
   --cds-alias-object-border-radius-300: 50%;
@@ -395,7 +406,7 @@
   --cds-alias-object-opacity-100: hsl(0deg 0% 0% / 20%);
   --cds-alias-object-opacity-200: hsl(0deg 0% 0% / 40%);
   --cds-alias-object-opacity-300: hsl(0deg 0% 0% / 60%);
-  --cds-alias-object-interaction-outline: Highlight solid 2px;
+  --cds-alias-object-interaction-outline: Highlight auto 2px;
   --cds-alias-object-interaction-outline-webkit: 5px auto -webkit-focus-ring-color;
   --cds-alias-object-interaction-outline-offset: 1px;
   --cds-alias-object-interaction-touch-target: calc(36 * (1rem / var(--cds-global-base)));
@@ -692,8 +703,8 @@
   --cds-alias-typography-top-gap-height: 0.1475em;
   --cds-alias-typography-ascender-height: 0.1703em;
   --cds-alias-typography-x-height: 0.517em;
-  --cds-alias-typography-link-color: var(--cds-global-color-blue-700);
-  --cds-alias-typography-link-color-hover: var(--cds-global-color-blue-800);
+  --cds-alias-typography-link-color: var(--cds-global-color-blue-800);
+  --cds-alias-typography-link-color-hover: var(--cds-global-color-blue-900);
   --cds-alias-typography-link-color-active: var(--cds-global-color-red-700);
   --cds-alias-typography-link-color-visited: var(--cds-global-color-violet-700);
   --cds-alias-typography-link-color-visited-hover: var(--cds-global-color-violet-1000);
