fix: add alias typography tokens

--- a/projects/angular/src/styles/core/tokens/_properties.tokens.scss
+++ b/projects/angular/src/styles/core/tokens/_properties.tokens.scss
@@ -6,6 +6,7 @@
  */
 
 @use './alias-interaction';
+@use './alias-typography';
 @use './alias-object-background';
 @use './alias-object-border';
 @use './alias-object-container';
