--- a/projects/angular/src/styles/core/layout/_optimize.scss
+++ b/projects/angular/src/styles/core/layout/_optimize.scss
@@ -7,18 +7,21 @@
 // This is a performance optimization that aliases the token to a "minified" value to reduce overall bundle size.
 @use '../tokens/variables.tokens' as *;
 @use '../../variables/variables.density' as density;
+@use '../../mixins';
 
-:root,
-:host {
-  --δ1: #{density.$clr-base-layout-space-3xs};
-  --δ2: #{density.$clr-base-layout-space-2xs};
-  --δ3: #{density.$clr-base-layout-space-xs};
-  --δ4: #{density.$clr-base-layout-space-s};
-  --δ5: #{density.$clr-base-layout-space-m};
-  --δ6: #{density.$clr-base-layout-space-l};
-  --δ7: #{density.$clr-base-layout-space-xl};
-  --δ8: #{density.$clr-base-layout-space-2xl};
-  --δ9: #{density.$clr-base-layout-space-3xl};
+@include mixins.root-or-host() {
+  &,
+  [clr-density] {
+    --δ1: #{density.$clr-base-layout-space-3xs};
+    --δ2: #{density.$clr-base-layout-space-2xs};
+    --δ3: #{density.$clr-base-layout-space-xs};
+    --δ4: #{density.$clr-base-layout-space-s};
+    --δ5: #{density.$clr-base-layout-space-m};
+    --δ6: #{density.$clr-base-layout-space-l};
+    --δ7: #{density.$clr-base-layout-space-xl};
+    --δ8: #{density.$clr-base-layout-space-2xl};
+    --δ9: #{density.$clr-base-layout-space-3xl};
+  }
 }
 
 $cds-global-layout-space-xxxs: var(--δ1);
