fix(datagrid): update logic with resize observer

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -152,12 +152,8 @@
       .datagrid-content-virtual .datagrid-rows {
         min-height: 100%;
 
-        &.datagrid-scrollbar-visible {
-          min-height: unset;
-
-          .datagrid-placeholder-container {
-            border-top: none;
-          }
+        &.datagrid-scrollbar-visible .datagrid-placeholder-container {
+          border-top: none;
         }
       }
     }
