--- a/projects/angular/src/emphasis/label/_variables.label.scss
+++ b/projects/angular/src/emphasis/label/_variables.label.scss
@@ -13,8 +13,7 @@ $clr-label-borderwidth: var(--clr-label-border-width) !default;
 // COLOR
 // Usage:
 // - ./_labels.clarity.scss
-$clr-label-font-color-light: var(--clr-label-font-color-light) !default;
-$clr-label-font-color-dark: var(--clr-label-font-color-dark) !default;
+$clr-label-font-color: var(--clr-label-font-color) !default;
 $clr-label-default-border-color: var(--clr-label-default-border-color) !default;
 
 // TYPOGRAPHIC STYLES
