--- a/projects/angular/src/styles/core/module.reset.scss
+++ b/projects/angular/src/styles/core/module.reset.scss
@@ -25,6 +25,12 @@ html {
 [cds-theme] {
   background: tokens.$cds-alias-object-app-background;
   color: tokens.$cds-alias-typography-color-500;
+  scrollbar-color: tokens.$cds-alias-utility-gray tokens.$cds-alias-object-opacity-0;
+  color-scheme: light;
+}
+
+[cds-theme~='dark'] {
+  color-scheme: dark;
 }
 
 [cds-control] ::placeholder {
