--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -18,11 +18,11 @@
   --clr-test-button-text-color: white;
   --clr-test-border-color: magenta;
 
-  [cds-theme] {
+  &:has(body[cds-theme]) {
     color-scheme: light;
   }
 
-  [cds-theme~='dark'] {
+  &:has(body[cds-theme~='dark']) {
     color-scheme: dark;
   }
 }
