fix(datagrid): set overflow on datagrid-rows instead of table on detail opened (#2112)

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -1306,10 +1306,13 @@
          * e.g. Helloworldthisisaveryveryveryveryverylongcontent
          */
         max-width: 100%;
+      }
+
+      .datagrid-rows {
         /**
          * To get rid of detail-pane overlapping the content inside the rows
          */
-        overflow: hidden;
+        overflow-x: hidden;
       }
 
       & > .cdk-virtual-scrollable div.datagrid-table {
