fix(cds-theme): set matching color-scheme in light or dark theme (#2113)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Issue Number: N/A

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

## Other information

---------

Co-authored-by: Valentin Mladenov <mvalentin@vmware.com>

--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -18,11 +18,12 @@
   --clr-test-button-text-color: white;
   --clr-test-border-color: magenta;
 
-  [cds-theme] {
+  // `:has` selector will force the HTML DOM element to follow respective cds-theme
+  &:has(body[cds-theme]) {
     color-scheme: light;
   }
 
-  [cds-theme~='dark'] {
+  &:has(body[cds-theme~='dark']) {
     color-scheme: dark;
   }
 }
