fix(popover): add intersection observer for overlay visibility

--- a/projects/demo/src/app/z-index/various-content/various-content.html
+++ b/projects/demo/src/app/z-index/various-content/various-content.html
@@ -1,4 +1,4 @@
-<h5>Button group overflow</h5>
+<h5 style="width: 1500px">Button group overflow</h5>
 <clr-button-group class="btn-primary">
   <clr-button>Create</clr-button>
   <clr-button>Favorite</clr-button>
