fix: migrate icon imports

--- a/projects/addons/datagrid-filters/composite-filters.component.html
+++ b/projects/addons/datagrid-filters/composite-filters.component.html
@@ -62,7 +62,7 @@
       [attr.aria-label]="showHideFiltersAriaLabel"
       (click)="showHideAllFilters()"
     >
-      <cds-icon shape="angle" class="is-solid" [attr.direction]="showHideFiltersArrowDir"></cds-icon>
+      <cds-icon shape="angle" class="is-solid" [direction]="showHideFiltersArrowDir"></cds-icon>
       {{ showHideFiltersLabel }}
     </button>
     <button
