--- a/projects/addons/datagrid/addons/column-toggle/datagrid-column-toggle.component.html
+++ b/projects/addons/datagrid/addons/column-toggle/datagrid-column-toggle.component.html
@@ -8,7 +8,7 @@
   #trigger="cdkOverlayOrigin"
   role="button"
   type="button"
-  class="btn btn-sm btn-link column-toggle--action"
+  class="btn btn-sm btn-link column-toggle-action"
   (click)="openState = !openState"
   [attr.aria-owns]="viewId"
   [attr.aria-controls]="viewId"
