--- a/projects/addons/datagrid/datagrid.component.html
+++ b/projects/addons/datagrid/datagrid.component.html
@@ -247,7 +247,7 @@
     >
     </appfx-dg-export>
     <div *ngIf="showDeselectAll" class="column-switch-wrapper export-link">
-      <button class="btn btn-sm column-toggle--action" [disabled]="deselectAllDisabled" (click)="onDeselectAllClick()">
+      <button class="btn btn-sm column-toggle-action" [disabled]="deselectAllDisabled" (click)="onDeselectAllClick()">
         {{ dgStrings.deselectAll }}
       </button>
     </div>
