--- a/projects/addons/datagrid/addons/export/export-datagrid.component.html
+++ b/projects/addons/datagrid/addons/export/export-datagrid.component.html
@@ -5,7 +5,7 @@
   <button
     data-test-id="export-link"
     type="button"
-    class="column-toggle--action btn btn-sm btn-link"
+    class="column-toggle-action btn btn-sm btn-link"
     [clrLoading]="exportStatus.inProgress || false"
     [disabled]="!(allItemsCount > 0)"
     (click)="exportAllIfOnlyOption()"
@@ -49,7 +49,7 @@
     <button
       data-test-id="export-link"
       type="button"
-      class="column-toggle--action btn btn-sm btn-link"
+      class="column-toggle-action btn btn-sm btn-link"
       [clrLoading]="exportStatus.inProgress || false"
       [disabled]="!(allItemsCount > 0)"
       (click)="exportAllIfOnlyOption()"
