fix(popover): button-group overlay positioning

--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -320,7 +320,7 @@
     }
   }
 
-  .clr-dropdown-container > .dropdown-menu {
+  .clr-popover-content > .dropdown-menu {
     visibility: visible;
     position: static;
   }
